@@ -109,37 +109,13 @@ public class CirculationHandlerImpl implements SpoolerProcessor<OfflineSpoolObje
 			this.spool = new OfflineSpoolerDevice(Configuration.getProperty(
 			        "Systems/Spooler/Spool"), this,
 			                             Configuration.getIntProperty(
-			                                     "Systems/Spooler/ReplayPeriod") *
+			                                     "Systems/Spooler/ReplayPeriod", 15) *
 			                             60000);
 		} catch (IOException e) {
             System.out.println("Problem accessing spooler file: " + Configuration.getProperty("Systems/Spooler/Spool"));
             CirculationHandlerImpl.logger.fatal("Problem opening offline spooler file", e);
             ooo.setOutOfOrder(true);
-		} catch (IllegalArgumentException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (SecurityException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (InstantiationException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (IllegalAccessException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (InvocationTargetException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (NoSuchMethodException e) {
-            System.out.println("Problem initialising offline spooler");
-            CirculationHandlerImpl.logger.fatal(e);
-            ooo.setOutOfOrder(true);
-		} catch (ClassNotFoundException e) {
+		} catch (IllegalArgumentException | SecurityException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException | ClassNotFoundException e) {
             System.out.println("Problem initialising offline spooler");
             CirculationHandlerImpl.logger.fatal(e);
             ooo.setOutOfOrder(true);
@@ -154,52 +130,23 @@ public class CirculationHandlerImpl implements SpoolerProcessor<OfflineSpoolObje
             try {
                 onlineLogger = (OnlineLogLogger) Class.forName(
                         Configuration.getSubProperty(loggers.item(i), "@class")).
-                        newInstance();
+                        getDeclaredConstructor().newInstance();
                 onlineLogger.initialise(loggers.item(i), ooo);
                 OnlineLog alog = new com.ceridwen.selfissue.client.log.
                         OnlineLogDevice(Configuration.getSubProperty(loggers.item(i), "Spool"),
                                 onlineLogger,
                                 Configuration.getIntSubProperty(loggers.item(i),
-                                        "ReplayPeriod") * 60000);
+                                        "ReplayPeriod", 15) * 60000);
                 this.log.addOnlineLogger(alog);
-    		} catch (IOException e) {
+    	    } catch (IOException e) {
                 System.out.println("Problem accessing spooler file: " + Configuration.getSubProperty(loggers.item(i), "Spool"));
                 CirculationHandlerImpl.logger.fatal("Problem opening online log file", e);
                 ooo.setOutOfOrder(true);
-            } catch (java.lang.NoClassDefFoundError e) {
+            } catch (java.lang.NoClassDefFoundError | IllegalArgumentException | SecurityException | ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                 System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
                 CirculationHandlerImpl.logger.fatal(e);
                 ooo.setOutOfOrder(true);
             }
-            catch (IllegalArgumentException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (SecurityException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (ClassNotFoundException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (InstantiationException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (IllegalAccessException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (InvocationTargetException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			} catch (NoSuchMethodException e) {
-                System.out.println("Problem initialising online logger: " + Configuration.getSubProperty(loggers.item(i), "@class"));
-                CirculationHandlerImpl.logger.fatal(e);
-                ooo.setOutOfOrder(true);
-			}
         }
     }
 
@@ -403,7 +350,7 @@ public class CirculationHandlerImpl implements SpoolerProcessor<OfflineSpoolObje
         try {
             response = this.unprotectedSend(request);
         } catch (RetriesExceeded ex) {
-            CirculationHandlerImpl.logger.fatal("Invalid spool message: " + request);
+            CirculationHandlerImpl.logger.warn("Repeated retries sending spool message: " + request);
             return false;
         }
 
@@ -560,19 +507,19 @@ public class CirculationHandlerImpl implements SpoolerProcessor<OfflineSpoolObje
             switch (type) {
                 case ITEM_IDREADER:
                     this.idReaderDevice = (IDReaderDevice) Class.forName(Configuration.getProperty(
-                    "Systems/ItemIDReaderDevice/@class")).newInstance();
+                    "Systems/ItemIDReaderDevice/@class")).getDeclaredConstructor().newInstance();
                     this.idReaderDevice.init(Configuration.getPropertyNode("Systems/ItemIDReaderDevice"));
                     break;
                 case PATRON_IDREADER:
                     this.idReaderDevice = (IDReaderDevice) Class.forName(Configuration.getProperty(
-                    "Systems/PatronIDReaderDevice/@class")).newInstance();
+                    "Systems/PatronIDReaderDevice/@class")).getDeclaredConstructor().newInstance();
                     this.idReaderDevice.init(Configuration.getPropertyNode("Systems/PatronIDReaderDevice"));
                     break;
                 default:
                     this.idReaderDevice = new com.ceridwen.selfissue.client.nulldevices.IDReaderDevice();
                     break;                    
             }
-        } catch (Exception ex) {
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException ex) {
             CirculationHandlerImpl.logger.warn("Could not initialise ID Reader Device - defaulting to null device", ex);
             this.idReaderDevice = new com.ceridwen.selfissue.client.nulldevices.IDReaderDevice();
         }
@@ -608,16 +555,16 @@ public class CirculationHandlerImpl implements SpoolerProcessor<OfflineSpoolObje
     public void initItemSecurityDevice() {
         try {
             this.itemSecurityDevice = (SecurityDevice) Class.forName(Configuration.getProperty(
-                    "Systems/ItemSecurityDevice/@class")).newInstance();
-        } catch (Exception ex) {
+                    "Systems/ItemSecurityDevice/@class")).getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException ex) {
             CirculationHandlerImpl.logger.warn("Could not initialise Item Security Device - defaulting to null device", ex);
             this.itemSecurityDevice = new com.ceridwen.selfissue.client.nulldevices.ItemSecurityDevice();
         }
         this.itemSecurityDevice.init(Configuration.getPropertyNode("Systems/ItemSecurityDevice"));
         this.itemSecurityDevice.setRetries(Configuration.getIntProperty(
-                "Systems/ItemSecurityDevice/Retries"));
+                "Systems/ItemSecurityDevice/Retries", 2));
         this.itemSecurityDevice.setTimeOut(Configuration.getIntProperty(
-                "Systems/ItemSecurityDevice/Timeout"));
+                "Systems/ItemSecurityDevice/Timeout", 1));
         ShutdownThread.registerSecurityDeviceShutdown(this.itemSecurityDevice);
     }
 
